[package]
authors = ["Saxon Hunt <saxonh.dev@gmail.com>"]
edition = "2021"
name = "lambda-packager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2", features = ["tokio_rt", "tokio_fs"]}
napi-derive = "2"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
